# francetravail-data-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-airflow.txt
.github/workflows/: ci.yml
data/: data.db
docker/: Dockerfile.airflow  Dockerfile.api  Dockerfile.streamlit  docker-compose.yml
scripts/: create_kafka_topics.sh  etl_pipeline.py  etl_to_kafka.py  filters.py  generate_fernet_key.py  init_db.py  produce_offers.py  save_offers.py  test_api_connection.py  test_kafka_loader.py
src/airflow_dags/: extract_offers.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routers/: filters.py  offers.py  stats.py
src/api_client/: auth.py
src/config/: logging_config.py  settings.py
src/db/: init_db.py  models.py  repository.py  sessions.py
src/domain/: departments.py
src/etl/extractors/: auth.py  france_travail_api.py
src/etl/loaders/: kafka_loader.py
src/etl/transformers/: cleaner.py  validator.py
src/kafka_consumer/: consumer.py
src/kafka_producer/: producer.py
src/streamlit_app/: api_client.py  app.py
tests/: test_auth.py
tests/unit/: test_api.py  test_auth.py  test_offers_api.py  test_transformers.py
