[project]
name = "francetravail-data-pipeline"
version = "0.1.0"
description = "Pipeline data complet pour l'API France Travail"
requires-python = ">=3.12,<3.13"

dependencies = [
  # HTTP / Kafka / DB / config
  "httpx>=0.27,<0.28",
  "confluent-kafka>=2.4,<3.0",
  "sqlalchemy>=2.0,<2.1",
  "psycopg2-binary>=2.9,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "python-dotenv>=1.0,<2.0",
  "watchdog>=4.0,<5.0",

  # API
  "fastapi>=0.110,<0.115",
  "uvicorn[standard]>=0.29,<0.32",

  # UI Streamlit
  "streamlit>=1.33,<1.40",
  "plotly>=5.20,<6.0",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "isort",
  "ruff",
  "mypy",
  "coverage",
  "cryptography",
  "types-requests",
  "pandas-stubs",
]

gcp = [
  "google-cloud-secret-manager>=2.20,<3.0",
  "google-cloud-logging>=3.10,<4.0",
  "google-cloud-storage>=2.16,<3.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "confluent_kafka.*",
    "sqlalchemy.*",
    "airflow.*",
    "streamlit.*",
    "plotly.*",
]
